bootstrap-part-a/ch39 minor changes

--- a/bootstrap-part-a/ch39 Getting Started/index.html
+++ b/bootstrap-part-a/ch39 Getting Started/index.html
@@ -28,12 +28,10 @@
   </head>
 
   <body>
+    <div class="container-fluid">
+      <h1>Animal Roster</h1>
+    </div>
     <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <h1>Animal Roster</h1>
-        </div>
-      </div>
       <div class="row">
         <div class="col-sm-4 col-lg-2">
           <img src="images\birds-with-rabbit.jpg" alt="birds-with-rabbit">
@@ -54,11 +52,9 @@
           <img src="images\small-cat.jpg" alt="small-cat">
         </div>
       </div>
-      <div class="row">
-        <div class="col-sm-12">
-          <h6>Nikos Athanasakis</h6>
-        </div>
-      </div>
+    </div>
+    <div class="container-fluid">
+      <h6>Nikos Athanasakis</h6>
     </div>
   </body>
 
