--- a/bootstrap-part-a/ch40 Target Project 1/index.html
+++ b/bootstrap-part-a/ch40 Target Project 1/index.html
@@ -11,6 +11,9 @@
     <!-- Bootstrap CSS files -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="stylesheets/main.css">
+
     <!-- jQuery is a prerequisite for Bootstrap JavaScript library to work properly -->
     <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 
@@ -24,17 +27,39 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <link rel="stylesheet" href="stylesheets/main.css">
   </head>
 
   <body>
-    <div class="container-fluid">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <button type="button" data-toggle="collapse" data-target="#navbar" class="navbar-toggle">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
 
-    </div>
-    <div class="container">
-      <div class="row">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">E-Shop</a>
+        </div>
 
-    </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav ">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#sell">Sell</a></li>
+            <li><a href="#register">Register</a></li>
+            <li><a href="#sign-in">Sign In</a></li>
+            <li><a href="#cart">Cart</a></li>
+            <li><a href="#search">Search</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <main class="container">
+      <h1>Shop Directly from People Around the World</h1>
+      <p class="lead">Discover items you can't find anywhere else!</p>
+    </main>
   </body>
 
 </html>
