bootstrap-part-a/ch41 work in progress

--- a/bootstrap-part-a/ch41 Twitter Bootstrap Theme Reference/index.html
+++ b/bootstrap-part-a/ch41 Twitter Bootstrap Theme Reference/index.html
@@ -31,7 +31,8 @@
   </head>
 
   <body>
-    <div id="carousel-london" class="carousel slide" data-ride="carousel">
+    <!-- TODO: ADD data-ride="carousel -->
+    <div id="carousel-london" class="carousel slide">
       <!-- Indicators -->
       <ol class="carousel-indicators">
         <li data-target="#carousel-london" data-slide-to="0" class="active"></li>
@@ -45,28 +46,40 @@
         <div class="item active">
           <img src="images/london-image-1.jpg" alt="Thesqua.re">
           <div class="carousel-caption">
-            <h3 class="dark-background">Thesqua.re</h3>
+            <div class="dark-background">
+              <h3>Thesqua.re</h3>
+              <p>Stop Clicking Around. Start Saving!</p>
+            </div>
           </div>
         </div>
 
         <div class="item">
           <img src="images/london-image-2.jpg" alt="Premier Inn">
           <div class="carousel-caption">
-            <h3 class="dark-background">Premier Inn</h3>
+            <div class="dark-background">
+              <h3>Thesqua.re</h3>
+              <p>Stop Clicking Around. Start Saving!</p>
+            </div>
           </div>
         </div>
 
         <div class="item">
           <img src="images/london-image-3.jpg" alt="Stay City">
           <div class="carousel-caption">
-            <h3 class="dark-background">Stay City</h3>
+            <div class="dark-background">
+              <h3>Thesqua.re</h3>
+              <p>Stop Clicking Around. Start Saving!</p>
+            </div>
           </div>
         </div>
 
         <div class="item">
           <img src="images/london-image-4.jpg" alt="Hilton">
           <div class="carousel-caption">
-            <h3 class="dark-background">Hilton</h3>
+            <div class="dark-background">
+              <h3>Thesqua.re</h3>
+              <p>Stop Clicking Around. Start Saving!</p>
+            </div>
           </div>
         </div>
       </div>
@@ -80,6 +93,39 @@
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
+    </div>
+
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Staying in London</h1>
+        <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <figure class="col-lg-6">
+          <img src="images\thesquare-small-image-140x140.jpg" alt="thesqua.re" class="img-circle">
+          <figcaption>
+            <h3>Thesqua.re</h3>
+            <p class="lead">Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
+          </figcaption>
+          <a href="#" class="btn btn-lg btn-info" role="button">View details</a>
+        </figure>
+      </div> <!-- row -->
+
+    </div> <!-- container -->
+
+    <div class="container">
+      <nav>
+        <ul class="nav nav-tabs">
+          <li class="active"><a href="#" data-toggle="tab">Thesqua.re</a></li>
+          <li><a href="#" data-toggle="tab">Thesqua.re</a></li>
+          <li><a href="#" data-toggle="tab">Thesqua.re</a></li>
+          <li><a href="#" data-toggle="tab">Thesqua.re</a></li>
+        </ul>
+        <div></div>
+      </nav>
     </div>
 
   </body>
