bootstrap-part-a/ch41 work in progress

--- a/bootstrap-part-a/ch41 Twitter Bootstrap Theme Reference/index.html
+++ b/bootstrap-part-a/ch41 Twitter Bootstrap Theme Reference/index.html
@@ -108,7 +108,7 @@
           <img src="images\thesquare-small-image-140x140.jpg" alt="thesqua.re" class="img-circle">
           <figcaption>
             <h3>Thesqua.re</h3>
-            <p class="lead">Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
+            <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
           </figcaption>
           <a href="#" class="btn btn-lg btn-info" role="button">View details</a>
         </figure>
@@ -119,12 +119,21 @@
     <div class="container">
       <nav>
         <ul class="nav nav-tabs">
-          <li class="active"><a href="#" data-toggle="tab">Thesqua.re</a></li>
-          <li><a href="#" data-toggle="tab">Thesqua.re</a></li>
-          <li><a href="#" data-toggle="tab">Thesqua.re</a></li>
+          <li class="active"><a href="#thesquare" data-toggle="tab">Thesqua.re</a></li>
+          <li><a href="#premier-inn" data-toggle="tab">Premier Inn</a></li>
+          <li><a href="#" data-toggle="tab">Premier Inn</a></li>
           <li><a href="#" data-toggle="tab">Thesqua.re</a></li>
         </ul>
-        <div></div>
+        <div class="tab-content">
+          <table id="thesquare" class="tab-pane active table table-striped">
+            <tr>
+              <td>City Reach Serviced Apartments, Limehouse</td>
+              <td>min stay: 3 nights</td>
+              <td>nearest transport: Limehouse</td>
+              <td><span class="label label-info lb-lg">&pound;948</span></td>
+            </tr>
+          </table>
+        </div>
       </nav>
     </div>
 
