--- a/bootstrap-part-a/ch41 Twitter Bootstrap Theme Reference/index.html
+++ b/bootstrap-part-a/ch41 Twitter Bootstrap Theme Reference/index.html
@@ -31,8 +31,49 @@
   </head>
 
   <body>
+
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-xs navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+
+        <div class="navbar-header">
+          <a href="#" class="navbar-brand">London Accommodation</a>
+        </div>
+
+        <!-- Add a parent div with class="navbar-collapse collapse" instead? -->
+        <ul id="navbar" class="nav navbar-nav navbar-collapse collapse">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+
+          <!-- Dropdown menu -->
+          <!-- Intentionally omitted class="dropdown" -->
+          <li>
+            <!-- Intentionally omitted class="dropdown-toggle" -->
+            <a href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              Dropdown<span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li><a href="#">item1</a></li>
+              <li role="separator" class="divider"></li>
+              <li class="dropdown-header">Nav header</li>
+              <li><a href="#">item2</a></li>
+            </ul>
+          </li>
+          <!-- End Dropdown menu -->
+
+        </ul>
+      </div>
+    </nav>
+    <!-- End Fixed navbar -->
+    <!-- Carousel -->
     <!-- TODO: ADD data-ride="carousel -->
-    <div id="carousel-london" class="carousel slide">
+    <section id="carousel-london" class="carousel slide">
       <!-- Indicators -->
       <ol class="carousel-indicators">
         <li data-target="#carousel-london" data-slide-to="0" class="active"></li>
@@ -93,49 +134,156 @@
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-    </div>
+    </section>
+    <!-- End Carousel -->
+    <main>
 
-    <div class="container">
-      <div class="jumbotron">
-        <h1>Staying in London</h1>
-        <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="row">
-        <figure class="col-lg-6">
-          <img src="images\thesquare-small-image-140x140.jpg" alt="thesqua.re" class="img-circle">
-          <figcaption>
-            <h3>Thesqua.re</h3>
-            <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
-          </figcaption>
-          <a href="#" class="btn btn-lg btn-info" role="button">View details</a>
-        </figure>
-      </div> <!-- row -->
-
-    </div> <!-- container -->
-
-    <div class="container">
-      <nav>
-        <ul class="nav nav-tabs">
-          <li class="active"><a href="#thesquare" data-toggle="tab">Thesqua.re</a></li>
-          <li><a href="#premier-inn" data-toggle="tab">Premier Inn</a></li>
-          <li><a href="#" data-toggle="tab">Premier Inn</a></li>
-          <li><a href="#" data-toggle="tab">Thesqua.re</a></li>
-        </ul>
-        <div class="tab-content">
-          <table id="thesquare" class="tab-pane active table table-striped">
-            <tr>
-              <td>City Reach Serviced Apartments, Limehouse</td>
-              <td>min stay: 3 nights</td>
-              <td>nearest transport: Limehouse</td>
-              <td><span class="label label-info lb-lg">&pound;948</span></td>
-            </tr>
-          </table>
+      <!-- Jumbotron -->
+      <section class="container">
+        <div class="jumbotron">
+          <h1>Staying in London</h1>
+          <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
         </div>
-      </nav>
-    </div>
+      </section>
+      <!-- End Jumbotron -->
+
+      <!-- Circle images with text -->
+      <section class="container">
+        <div class="row">
+          <figure class="col-lg-6">
+            <img src="images/thesquare-small-image-140x140.jpg" alt="thesqua.re" class="img-circle">
+            <figcaption>
+              <h3>Thesqua.re</h3>
+              <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
+            </figcaption>
+            <a href="#" class="btn btn-info" role="button">View details</a>
+          </figure>
+          <figure class="col-lg-6">
+            <img src="images/thesquare-small-image-140x140.jpg" alt="thesqua.re" class="img-circle">
+            <figcaption>
+              <h3>Thesqua.re</h3>
+              <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
+            </figcaption>
+            <a href="#" class="btn btn-info" role="button">View details</a>
+          </figure>
+        </div>
+        <div class="row">
+          <figure class="col-lg-6">
+            <img src="images/thesquare-small-image-140x140.jpg" alt="thesqua.re" class="img-circle">
+            <figcaption>
+              <h3>Thesqua.re</h3>
+              <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
+            </figcaption>
+            <a href="#" class="btn btn-info" role="button">View details</a>
+          </figure>
+          <figure class="col-lg-6">
+            <img src="images/thesquare-small-image-140x140.jpg" alt="thesqua.re" class="img-circle">
+            <figcaption>
+              <h3>Thesqua.re</h3>
+              <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
+            </figcaption>
+            <a href="#" class="btn btn-info" role="button">View details</a>
+          </figure>
+        </div>
+      </section>
+      <!-- End Circle images with text -->
+
+      <!-- Tabs with tables -->
+      <section class="container">
+        <nav>
+          <ul class="nav nav-tabs">
+            <li class="active"><a href="#thesquare" data-toggle="tab">Thesqua.re</a></li>
+            <li><a href="#premier-inn" data-toggle="tab">Premier Inn</a></li>
+            <li><a href="#stay-city" data-toggle="tab">Stay City</a></li>
+            <li><a href="#hilton" data-toggle="tab">Hilton</a></li>
+          </ul>
+
+          <div class="tab-content">
+            <table id="thesquare" class="tab-pane active table table-striped">
+              <tr>
+                <td>City Reach Serviced Apartments, Limehouse</td>
+                <td>min stay: 3 nights</td>
+                <td>nearest transport: Limehouse</td>
+                <td><span class="label label-info lb-lg">&pound;948</span></td>
+              </tr>
+              <tr>
+                <td>City Reach Serviced Apartments, Limehouse</td>
+                <td>min stay: 3 nights</td>
+                <td>nearest transport: Limehouse</td>
+                <td><span class="label label-info lb-lg">&pound;948</span></td>
+              </tr>
+              <tr>
+                <td>City Reach Serviced Apartments, Limehouse</td>
+                <td>min stay: 3 nights</td>
+                <td>nearest transport: Limehouse</td>
+                <td><span class="label label-info lb-lg">&pound;948</span></td>
+              </tr>
+            </table>
+            <table id="premier-inn" class="tab-pane table table-striped">
+              <tr>
+                <td>Premier City Reach Serviced Apartments, Limehouse</td>
+                <td>min stay: 3 nights</td>
+                <td>nearest transport: Limehouse</td>
+                <td><span class="label label-info lb-lg">&pound;341</span></td>
+              </tr>
+              <tr>
+                <td>Premier City Reach Serviced Apartments, Limehouse</td>
+                <td>min stay: 3 nights</td>
+                <td>nearest transport: Limehouse</td>
+                <td><span class="label label-info lb-lg">&pound;341</span></td>
+              </tr>
+              <tr>
+                <td>Premier City Reach Serviced Apartments, Limehouse</td>
+                <td>min stay: 3 nights</td>
+                <td>nearest transport: Limehouse</td>
+                <td><span class="label label-info lb-lg">&pound;341</span></td>
+              </tr>
+            </table>
+            <table id="stay-city" class="tab-pane table table-striped">
+              <tr>
+                <td>Stay City Reach Serviced Apartments, Limehouse</td>
+                <td>min stay: 3 nights</td>
+                <td>nearest transport: Limehouse</td>
+                <td><span class="label label-info lb-lg">&pound;567</span></td>
+              </tr>
+              <tr>
+                <td>Stay City Reach Serviced Apartments, Limehouse</td>
+                <td>min stay: 3 nights</td>
+                <td>nearest transport: Limehouse</td>
+                <td><span class="label label-info lb-lg">&pound;567</span></td>
+              </tr>
+              <tr>
+                <td>Stay City Reach Serviced Apartments, Limehouse</td>
+                <td>min stay: 3 nights</td>
+                <td>nearest transport: Limehouse</td>
+                <td><span class="label label-info lb-lg">&pound;567</span></td>
+              </tr>
+            </table>
+            <table id="hilton" class="tab-pane table table-striped">
+              <tr>
+                <td>Hilton Reach Serviced Apartments, Limehouse</td>
+                <td>min stay: 3 nights</td>
+                <td>nearest transport: Limehouse</td>
+                <td><span class="label label-info lb-lg">&pound;375</span></td>
+              </tr>
+              <tr>
+                <td>Hilton Reach Serviced Apartments, Limehouse</td>
+                <td>min stay: 3 nights</td>
+                <td>nearest transport: Limehouse</td>
+                <td><span class="label label-info lb-lg">&pound;375</span></td>
+              </tr>
+              <tr>
+                <td>Hilton Reach Serviced Apartments, Limehouse</td>
+                <td>min stay: 3 nights</td>
+                <td>nearest transport: Limehouse</td>
+                <td><span class="label label-info lb-lg">&pound;375</span></td>
+              </tr>
+            </table>
+          </div>
+        </nav>
+      </section>
+      <!-- End Tabs with tables -->
+    </main>
 
   </body>
 
