bootstrap-part-a/ch41 submission for review

--- a/bootstrap-part-a/ch41 Twitter Bootstrap Theme Reference/index.html
+++ b/bootstrap-part-a/ch41 Twitter Bootstrap Theme Reference/index.html
@@ -9,19 +9,19 @@
     <title>Bare Bones Twitter Bootstrap Page</title>
 
     <!-- Bootstrap CSS files -->
-    <link rel="stylesheet" href="../bootstrap-3.3.6-dist/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
+    <!-- <link rel="stylesheet" href="../bootstrap-3.3.6-dist/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="stylesheets/main.css">
 
     <!-- jQuery is a prerequisite for Bootstrap JavaScript library to work properly -->
-    <script src="../jquery/jquery-2.1.4.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-2.1.4.js"></script> -->
+    <!-- <script src="../jquery/jquery-2.1.4.js"></script> -->
+    <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 
     <!-- Bootstrap JavaScript Files -->
-    <script src="../bootstrap-3.3.6-dist/js/bootstrap.min.js" type="text/javascript"></script>
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> -->
+    <!-- <script src="../bootstrap-3.3.6-dist/js/bootstrap.min.js" type="text/javascript"></script> -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
     <!-- for IE8 or earlier -->
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
