fix: Added parent div for nabvar-nav

--- a/bootstrap-part-a/ch41 Twitter Bootstrap Theme Reference/index.html
+++ b/bootstrap-part-a/ch41 Twitter Bootstrap Theme Reference/index.html
@@ -48,30 +48,31 @@
           <a href="#" class="navbar-brand">London Accommodation</a>
         </div>
 
-        <!-- Intentionally omitted a parent div with class="navbar-collapse collapse" -->
-        <ul id="navbar" class="nav navbar-nav navbar-collapse collapse">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
 
-          <!-- Dropdown menu -->
-          <!-- Intentionally omitted class="dropdown" -->
-          <li>
-            <!-- Intentionally omitted class="dropdown-toggle" -->
-            <a href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <!-- Dropdown menu -->
+            <!-- Intentionally omitted class="dropdown" -->
+            <li>
+              <!-- Intentionally omitted class="dropdown-toggle" -->
+              <a href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
               Dropdown<span class="caret"></span>
             </a>
-            <ul class="dropdown-menu">
-              <li><a href="#">item1</a></li>
-              <li role="separator" class="divider"></li>
-              <li class="dropdown-header">Nav header</li>
-              <li><a href="#">item2</a></li>
-            </ul>
-          </li>
-          <!-- End Dropdown menu -->
+              <ul class="dropdown-menu">
+                <li><a href="#">item1</a></li>
+                <li role="separator" class="divider"></li>
+                <li class="dropdown-header">Nav header</li>
+                <li><a href="#">item2</a></li>
+              </ul>
+            </li>
+            <!-- End Dropdown menu -->
 
-        </ul>
-      </div>
+          </ul>
+        </div> <!-- /.navbar-collapse -->
+      </div> <!--/.container -->
     </nav>
     <!-- End Fixed navbar -->
 
@@ -101,7 +102,7 @@
           <img src="images/london-image-2.jpg" alt="Premier Inn">
           <div class="carousel-caption">
             <div class="dark-background">
-              <h3>Thesqua.re</h3>
+              <h3>Premier Inn</h3>
               <p>Stop Clicking Around. Start Saving!</p>
             </div>
           </div>
@@ -111,7 +112,7 @@
           <img src="images/london-image-3.jpg" alt="Stay City">
           <div class="carousel-caption">
             <div class="dark-background">
-              <h3>Thesqua.re</h3>
+              <h3>Stay City</h3>
               <p>Stop Clicking Around. Start Saving!</p>
             </div>
           </div>
@@ -121,7 +122,7 @@
           <img src="images/london-image-4.jpg" alt="Hilton">
           <div class="carousel-caption">
             <div class="dark-background">
-              <h3>Thesqua.re</h3>
+              <h3>Hilton</h3>
               <p>Stop Clicking Around. Start Saving!</p>
             </div>
           </div>
