--- a/bootstrap-part-a/ch42 Cover Page Project/index.html
+++ b/bootstrap-part-a/ch42 Cover Page Project/index.html
@@ -33,6 +33,29 @@
   </head>
 
   <body>
+    <div class="overlay">
+    </div>
+    <nav class="navbar navbar-inverse">
+      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Cover</a>
+      </div>
+
+      <div id="navbar" class="collapse navbar-collapse">
+
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <!-- <h1>hello</h1> -->
 
   </body>
 
