--- a/bootstrap-part-a/ch42 Cover Page Project/index.html
+++ b/bootstrap-part-a/ch42 Cover Page Project/index.html
@@ -35,7 +35,8 @@
   <body>
     <div class="overlay">
     </div>
-    <nav class="navbar navbar-inverse">
+
+    <nav id="navbar-container" class="navbar navbar-inverse navbar-fixed-top">
       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -43,19 +44,29 @@
         <span class="icon-bar"></span>
       </button>
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Cover</a>
+        <a class="navbar-brand" href="#">Athens</a>
       </div>
 
       <div id="navbar" class="collapse navbar-collapse">
-
-        <ul class="nav navbar-nav">
+        <ul class="nav navbar-nav navbar-right">
           <li class="active"><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#museums">Museums</a></li>
+          <li><a href="#theaters">Theaters</a></li>
+          <li><a href="#cinemas">Cinemas</a></li>
         </ul>
       </div>
+
     </nav>
-    <!-- <h1>hello</h1> -->
+
+    <div class="center-content">
+      <h1>Any Time of The Year</h1>
+      <p class="lead">Visit Athens and The Greek Islands</p>
+
+    </div>
+
+    <footer class="footer-content">
+      <small>Copyright &copy; Nikos Athanasakis</small>
+    </footer>
 
   </body>
 
