feat: Added 'Book Now' button

--- a/bootstrap-part-a/ch42 Cover Page Project/index.html
+++ b/bootstrap-part-a/ch42 Cover Page Project/index.html
@@ -61,7 +61,7 @@
     <div class="center-content">
       <h1>Any Time of The Year</h1>
       <p class="lead">Visit Athens and The Greek Islands</p>
-
+      <a href="#" class="btn btn-lg btn-success">Book Now</a>
     </div>
 
     <footer class="footer-content">
