feat: Added sidebar

--- a/bootstrap-part-a/ch43 Twitter Bootstrap Admin Dashboard/index.html
+++ b/bootstrap-part-a/ch43 Twitter Bootstrap Admin Dashboard/index.html
@@ -15,6 +15,9 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="stylesheets/main.css">
 
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:400,700" rel="stylesheet">
+
     <!-- jQuery is a prerequisite for Bootstrap JavaScript library to work properly -->
     <script src="../jquery/jquery-2.1.4.js"></script>
     <!-- <script src="https://code.jquery.com/jquery-2.1.4.js"></script> -->
@@ -61,6 +64,49 @@
       </div>
 
     </nav>
+
+    <div class="container-fluid">
+      <div class="row">
+
+        <div class="col-sm-3 col-md-2 hidden-xs sidebar">
+
+          <ul class="nav">
+            <li class="active"><a href="#">Overview</a></li>
+            <li><a href="#">Reports</a></li>
+            <li><a href="#">Analytics</a></li>
+            <li><a href="#">Export</a></li>
+          </ul>
+          <ul class="nav">
+            <li><a href="#">Nav1</a></li>
+            <li><a href="#">Nav2</a></li>
+            <li><a href="#">Nav3</a></li>
+            <li><a href="#">Nav4</a></li>
+            <li><a href="#">Nav5</a></li>
+          </ul>
+          <ul class="nav">
+            <li><a href="#">Nav1</a></li>
+            <li><a href="#">Nav2</a></li>
+            <li><a href="#">Nav3</a></li>
+          </ul>
+
+        </div><!-- /.sidebar -->
+
+        <main class="col-sm-9 col-md-10">
+          <div class="page-header">
+            <h1>Dashboard</h1>
+          </div>
+          <figure>
+            <img src="https://placehold.it/300x300" alt="placeholder">
+            <figcaption>
+              <h4></h4>
+              <p></p>
+            </figcaption>
+          </figure>
+
+        </main>
+      </div> <!-- /.row -->
+    </div> <!-- /.container-fluid -->
+
   </body>
 
 </html>
