--- a/bootstrap-part-a/ch43 Twitter Bootstrap Admin Dashboard/index.html
+++ b/bootstrap-part-a/ch43 Twitter Bootstrap Admin Dashboard/index.html
@@ -89,23 +89,28 @@
             <li><a href="#">Nav3</a></li>
           </ul>
 
-        </div><!-- /.sidebar -->
+        </div>
+        <!-- /.sidebar -->
 
         <main class="col-sm-9 col-md-10">
           <div class="page-header">
             <h1>Dashboard</h1>
           </div>
-          <figure>
-            <img src="https://placehold.it/300x300" alt="placeholder">
-            <figcaption>
-              <h4></h4>
-              <p></p>
-            </figcaption>
-          </figure>
-
+          <section class="row">
+            <figure class="col-sm-6 col-md-4 text-center">
+              <img src="https://placehold.it/300x300" class="img-circle img-responsive" alt="placeholder">
+              <figcaption>
+                <h4>Label</h4>
+                <p class="text-muted">Something else</p>
+              </figcaption>
+            </figure>
+          </section>
+          <!-- /.row -->
         </main>
-      </div> <!-- /.row -->
-    </div> <!-- /.container-fluid -->
+      </div>
+      <!-- /.row -->
+    </div>
+    <!-- /.container-fluid -->
 
   </body>
 
