--- a/bootstrap-part-a/ch43 Twitter Bootstrap Admin Dashboard/index.html
+++ b/bootstrap-part-a/ch43 Twitter Bootstrap Admin Dashboard/index.html
@@ -9,8 +9,8 @@
     <title>Bare Bones Twitter Bootstrap Page</title>
 
     <!-- Bootstrap CSS files -->
-    <link rel="stylesheet" href="../bootstrap-3.3.6-dist/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
+    <!-- <link rel="stylesheet" href="../bootstrap-3.3.6-dist/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="stylesheets/main.css">
@@ -19,12 +19,12 @@
     <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:400,700" rel="stylesheet">
 
     <!-- jQuery is a prerequisite for Bootstrap JavaScript library to work properly -->
-    <script src="../jquery/jquery-2.1.4.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-2.1.4.js"></script> -->
+    <!-- <script src="../jquery/jquery-2.1.4.js"></script> -->
+    <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 
     <!-- Bootstrap JavaScript Files -->
-    <script src="../bootstrap-3.3.6-dist/js/bootstrap.min.js" type="text/javascript"></script>
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> -->
+    <!-- <script src="../bootstrap-3.3.6-dist/js/bootstrap.min.js" type="text/javascript"></script> -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
     <!-- for IE8 or earlier -->
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -36,8 +36,10 @@
   </head>
 
   <body>
+
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
+
         <button type="button" class="navbar-toggle collapsed" data-target="#navbar" data-toggle="collapse" aria-expanded="false" aria-controls="navbar">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
@@ -51,7 +53,6 @@
 
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <!-- <li><a href="#"></a></li> -->
             <li><a href="#">Dashboard</a></li>
             <li><a href="#">Settings</a></li>
             <li><a href="#">Profile</a></li>
@@ -60,12 +61,12 @@
           <form class="navbar-form navbar-right">
             <input type="text" class="form-control" placeholder="Search...">
           </form>
-        </div>
-      </div>
+        </div><!-- /#navbar  -->
 
-    </nav>
+      </div><!-- /.container-fluid -->
+    </nav><!-- ./navbar-fixed-top -->
 
-    <div class="container-fluid">
+    <div class="container-fluid" id="sidebar-main-container">
       <div class="row">
 
         <div class="col-sm-3 col-md-2 hidden-xs sidebar">
@@ -89,14 +90,16 @@
             <li><a href="#">Nav3</a></li>
           </ul>
 
-        </div>
-        <!-- /.sidebar -->
+        </div><!-- /.sidebar -->
 
-        <main class="col-sm-9 col-md-10">
+        <main class="col-sm-9 col-md-10 col-sm-offset-3 col-md-offset-2">
+
           <div class="page-header">
             <h1>Dashboard</h1>
           </div>
-          <section class="row">
+
+          <div class="row">
+
             <figure class="col-sm-6 col-md-4 text-center">
               <img src="https://placehold.it/300x300" class="img-circle img-responsive" alt="placeholder">
               <figcaption>
@@ -104,13 +107,254 @@
                 <p class="text-muted">Something else</p>
               </figcaption>
             </figure>
-          </section>
-          <!-- /.row -->
+
+            <figure class="col-sm-6 col-md-4 text-center">
+              <img src="https://placehold.it/300x300" class="img-circle img-responsive" alt="placeholder">
+              <figcaption>
+                <h4>Label</h4>
+                <p class="text-muted">Something else</p>
+              </figcaption>
+            </figure>
+
+            <figure class="col-sm-6 col-md-4 text-center">
+              <img src="https://placehold.it/300x300" class="img-circle img-responsive" alt="placeholder">
+              <figcaption>
+                <h4>Label</h4>
+                <p class="text-muted">Something else</p>
+              </figcaption>
+            </figure>
+
+            <figure class="col-sm-6 col-md-4 text-center">
+              <img src="https://placehold.it/300x300" class="img-circle img-responsive" alt="placeholder">
+              <figcaption>
+                <h4>Label</h4>
+                <p class="text-muted">Something else</p>
+              </figcaption>
+            </figure>
+
+            <figure class="col-sm-6 col-md-4 text-center">
+              <img src="https://placehold.it/300x300" class="img-circle img-responsive" alt="placeholder">
+              <figcaption>
+                <h4>Label</h4>
+                <p class="text-muted">Something else</p>
+              </figcaption>
+            </figure>
+
+            <figure class="col-sm-6 col-md-4 text-center">
+              <img src="https://placehold.it/300x300" class="img-circle img-responsive" alt="placeholder">
+              <figcaption>
+                <h4>Label</h4>
+                <p class="text-muted">Something else</p>
+              </figcaption>
+            </figure>
+
+          </div><!-- /.row -->
+
+          <div class="page-header">
+            <h2>Section title</h2>
+          </div>
+
+          <div class="table-responsive">
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Header 1</th>
+                  <th>Header 2</th>
+                  <th>Header 3</th>
+                  <th>Header 4</th>
+                  <th>Header 5</th>
+                  <th>Header 6</th>
+                  <th>Header 7</th>
+                  <th>Header 8</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1,001</td>
+                  <td>Lorem</td>
+                  <td>ipsum</td>
+                  <td>dolor</td>
+                  <td>sit</td>
+                  <td>Lorem</td>
+                  <td>ipsum</td>
+                  <td>dolor</td>
+                  <td>sit</td>
+                </tr>
+                <tr>
+                  <td>1,002</td>
+                  <td>amet</td>
+                  <td>consectetur</td>
+                  <td>adipiscing</td>
+                  <td>elit</td>
+                  <td>amet</td>
+                  <td>consectetur</td>
+                  <td>adipiscing</td>
+                  <td>elit</td>
+                </tr>
+                <tr>
+                  <td>1,003</td>
+                  <td>Integer</td>
+                  <td>nec</td>
+                  <td>odio</td>
+                  <td>Praesent</td>
+                  <td>Integer</td>
+                  <td>nec</td>
+                  <td>odio</td>
+                  <td>Praesent</td>
+                </tr>
+                <tr>
+                  <td>1,003</td>
+                  <td>libero</td>
+                  <td>Sed</td>
+                  <td>cursus</td>
+                  <td>ante</td>
+                  <td>libero</td>
+                  <td>Sed</td>
+                  <td>cursus</td>
+                  <td>ante</td>
+                </tr>
+                <tr>
+                  <td>1,004</td>
+                  <td>dapibus</td>
+                  <td>diam</td>
+                  <td>Sed</td>
+                  <td>nisi</td>
+                  <td>dapibus</td>
+                  <td>diam</td>
+                  <td>Sed</td>
+                  <td>nisi</td>
+                </tr>
+                <tr>
+                  <td>1,005</td>
+                  <td>Nulla</td>
+                  <td>quis</td>
+                  <td>sem</td>
+                  <td>at</td>
+                  <td>Nulla</td>
+                  <td>quis</td>
+                  <td>sem</td>
+                  <td>at</td>
+                </tr>
+                <tr>
+                  <td>1,006</td>
+                  <td>nibh</td>
+                  <td>elementum</td>
+                  <td>imperdiet</td>
+                  <td>Duis</td>
+                  <td>nibh</td>
+                  <td>elementum</td>
+                  <td>imperdiet</td>
+                  <td>Duis</td>
+                </tr>
+                <tr>
+                  <td>1,007</td>
+                  <td>sagittis</td>
+                  <td>ipsum</td>
+                  <td>Praesent</td>
+                  <td>mauris</td>
+                  <td>sagittis</td>
+                  <td>ipsum</td>
+                  <td>Praesent</td>
+                  <td>mauris</td>
+                </tr>
+                <tr>
+                  <td>1,008</td>
+                  <td>Fusce</td>
+                  <td>nec</td>
+                  <td>tellus</td>
+                  <td>sed</td>
+                  <td>Fusce</td>
+                  <td>nec</td>
+                  <td>tellus</td>
+                  <td>sed</td>
+                </tr>
+                <tr>
+                  <td>1,009</td>
+                  <td>augue</td>
+                  <td>semper</td>
+                  <td>porta</td>
+                  <td>Mauris</td>
+                  <td>augue</td>
+                  <td>semper</td>
+                  <td>porta</td>
+                  <td>Mauris</td>
+                </tr>
+                <tr>
+                  <td>1,010</td>
+                  <td>massa</td>
+                  <td>Vestibulum</td>
+                  <td>lacinia</td>
+                  <td>arcu</td>
+                  <td>massa</td>
+                  <td>Vestibulum</td>
+                  <td>lacinia</td>
+                  <td>arcu</td>
+                </tr>
+                <tr>
+                  <td>1,011</td>
+                  <td>eget</td>
+                  <td>nulla</td>
+                  <td>Class</td>
+                  <td>aptent</td>
+                  <td>eget</td>
+                  <td>nulla</td>
+                  <td>Class</td>
+                  <td>aptent</td>
+                </tr>
+                <tr>
+                  <td>1,012</td>
+                  <td>taciti</td>
+                  <td>sociosqu</td>
+                  <td>ad</td>
+                  <td>litora</td>
+                  <td>taciti</td>
+                  <td>sociosqu</td>
+                  <td>ad</td>
+                  <td>litora</td>
+                </tr>
+                <tr>
+                  <td>1,013</td>
+                  <td>torquent</td>
+                  <td>per</td>
+                  <td>conubia</td>
+                  <td>nostra</td>
+                  <td>torquent</td>
+                  <td>per</td>
+                  <td>conubia</td>
+                  <td>nostra</td>
+                </tr>
+                <tr>
+                  <td>1,014</td>
+                  <td>per</td>
+                  <td>inceptos</td>
+                  <td>himenaeos</td>
+                  <td>Curabitur</td>
+                  <td>per</td>
+                  <td>inceptos</td>
+                  <td>himenaeos</td>
+                  <td>Curabitur</td>
+                </tr>
+                <tr>
+                  <td>1,015</td>
+                  <td>sodales</td>
+                  <td>ligula</td>
+                  <td>in</td>
+                  <td>libero</td>
+                  <td>sodales</td>
+                  <td>ligula</td>
+                  <td>in</td>
+                  <td>libero</td>
+                </tr>
+              </tbody>
+            </table>
+          </div><!-- /.table-responsive -->
+
         </main>
-      </div>
-      <!-- /.row -->
-    </div>
-    <!-- /.container-fluid -->
+
+      </div><!-- /.row -->
+
+    </div><!-- /.sidebar-main-container -->
 
   </body>
 
